@@ -54,6 +54,9 @@
 # currently in-flight messages and retained messages.
 #persistence 0
 
+# The filename to use for the persistent database, not including the path.
+#persistence_file mosquitto.db
+
 # Location for persistent database. Must include trailing /
 # Default is an empty string (current directory).
 # Set to /var/lib/mosquitto/ if running as a proper service.
